--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>Our goal is to create a very basic publication workflow with pydoit. The final pipeline will download the data, create a graph, and compile the document with pandoc, providing a basic framework for publishing a reproducible paper.</p>
 <div id="prerequisites" class="prereq panel panel-warning">
 <div class="panel-heading">
-<h2 id="prerequisites" class="prereq panel panel-warning"><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
+<h2><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
 </div>
 <div class="panel-body">
 <ul>
@@ -47,7 +47,7 @@
 </div>
 <div id="setup" class="prereq panel panel-warning">
 <div class="panel-heading">
-<h2 id="setup" class="prereq panel panel-warning"><span class="glyphicon glyphicon-education"></span>Setup</h2>
+<h2><span class="glyphicon glyphicon-education"></span>Setup</h2>
 </div>
 <div class="panel-body">
 <ul>
@@ -61,9 +61,12 @@
 <h2 id="topics">Topics</h2>
 <ol style="list-style-type: decimal">
 <li><a href="01-basics.html">Background and Basics</a></li>
-<li><a href="02-targets.html">Targets and Dependencies</a></li>
+<li><a href="02-targets.html">Targets</a></li>
+<li><a href="03-dependencies.html">Dependencies and uptodate</a></li>
+<li><a href="04-python-tasks.html">Python Tasks</a></li>
+<li><a href="05-cleanup.html">Cleanup and Automatic Variables</a></li>
+<li><a href="06-importaing.html">Importing Tasks</a></li>
 </ol>
-<p>Lessons created by <a href="https://github.com/isakiko">Isabell Kiral-Kornek</a> and <a href="https://github.com/robrkerr">Robert Kerr</a> and modified for this workshop by <a href="https://github.com/emilydolson">Emily Dolson</a>.</p>
         </div>
       </div>
       <div class="footer">
