Add python task first draft, regen

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <li><a href="02-targets.html">Targets</a></li>
 <li><a href="03-dependencies.html">Dependencies and uptodate</a></li>
 <li><a href="04-python-tasks.html">Python Tasks</a></li>
-<li><a href="05-cleanup.html">Cleanup and Automatic Variables</a></li>
+<li><a href="05-cleanup.html">Cleanup</a></li>
 <li><a href="06-importaing.html">Importing Tasks</a></li>
 </ol>
         </div>
