Add final lessons for first draft

--- a/05-cleanup.html
+++ b/05-cleanup.html
@@ -67,6 +67,14 @@
              <span class="co">&#39;uptodate&#39;</span>: [run_once],
              <span class="co">&#39;clean&#39;</span>: [clean_targets, print_url]}</code></pre></div>
 <p>The <code>clean</code> attribute takes the same form as <code>actions</code> or even <code>uptodate</code>, and so can also be a string to be executed in the shell.</p>
+<div id="clean-all-the-things" class="challenge panel panel-success">
+<div class="panel-heading">
+<h2 id="clean-all-the-things" class="challenge panel panel-success"><span class="glyphicon glyphicon-pencil"></span>Clean all the things</h2>
+</div>
+<div class="panel-body">
+<p>Add <code>clean</code> attributes to all the currently defined tasks. If you'd like, get creative with your attributes. Include two clean actions in at least one of the tasks (the second doesn't have to do anything groundbreaking).</p>
+</div>
+</div>
         </div>
       </div>
       <div class="footer">
