--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>Our goal is to create a very basic publication workflow with pydoit. The final pipeline will download the data, create a graph, and compile the document with pandoc, providing a basic framework for publishing a reproducible paper.</p>
 <div id="prerequisites" class="prereq panel panel-warning">
 <div class="panel-heading">
-<h2><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
+<h2 id="prerequisites" class="prereq panel panel-warning"><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
 </div>
 <div class="panel-body">
 <ul>
@@ -47,7 +47,7 @@
 </div>
 <div id="setup" class="prereq panel panel-warning">
 <div class="panel-heading">
-<h2><span class="glyphicon glyphicon-education"></span>Setup</h2>
+<h2 id="setup" class="prereq panel panel-warning"><span class="glyphicon glyphicon-education"></span>Setup</h2>
 </div>
 <div class="panel-body">
 <ul>
@@ -65,7 +65,8 @@
 <li><a href="03-dependencies.html">Dependencies and uptodate</a></li>
 <li><a href="04-python-tasks.html">Python Tasks</a></li>
 <li><a href="05-cleanup.html">Cleanup</a></li>
-<li><a href="06-importaing.html">Importing Tasks</a></li>
+<li><a href="06-subtasks.html">Subtasks</a></li>
+<li><a href="07-finishing-up.html">Finishing Up</a></li>
 </ol>
         </div>
       </div>
