Fix link in index

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <li><a href="01-basics.html">Background and Basics</a></li>
 <li><a href="02-targets.html">Targets</a></li>
 <li><a href="03-dependencies.html">Dependencies and uptodate</a></li>
-<li><a href="04-python-tasks.html">Python Tasks</a></li>
+<li><a href="04-python.html">Python Tasks</a></li>
 <li><a href="05-cleanup.html">Cleanup</a></li>
 <li><a href="06-subtasks.html">Subtasks</a></li>
 <li><a href="07-finishing-up.html">Finishing Up</a></li>
